# mcdisco

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: commands.rs  data.rs  main.rs  server_helper.rs
