[package]
name = "mcdisco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.11.5"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true